--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
   
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2021 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MBohkono.com</a>
+      © 2022 Copyright:
+      <a class="text-white" href="https://github.com/Agililham">Agililham</a>
     </div>
     <!-- Copyright -->
   </footer>
