--- a/index.html
+++ b/index.html
@@ -1,176 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vader</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="ubah.css">
-    <link rel="stylesheet" href="assets/font/stylesheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vader</title>
+  <link rel="icon" href="assets/images/icon.png">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="ubah.css">
+  <link rel="stylesheet" href="assets/font/stylesheet.css">
 </head>
+
 <body data-spy="scroll" data-target="#navbarSupportedContent">
-<!-- Header -->
-<header>
+  <!-- Header -->
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" href="#">Vader</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#product">Product</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#service">Service</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#sign">Sign up</a>
-            </li>
-          </ul>
-            <button class="btn btn-success text-dark" type="submit">Sign in</button>
-        </div>
-      </nav>
-<div class="mid">
-    <video autoplay muted loop>
+      <a class="navbar-brand" href="#">Vader</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#product">Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#service">Service</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sign">Sign up</a>
+          </li>
+        </ul>
+        <button class="btn btn-success text-dark" type="submit">Sign in</button>
+      </div>
+    </nav>
+    <div class="mid">
+      <video autoplay muted loop>
         <source class="embed-responsive" src="assets/video/Home.mp4" type="video/mp4">
-    </video>
-    <div class="cuy text-center">
+      </video>
+      <div class="cuy text-center">
         <h2 class="text-light display-4 font-weight-bold">Web Development</h2>
-        <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus ad delectus ratione tempora aspernatur consectetur id</p>
-        <a class="text-dark"  href="#">Get Started</a>
+        <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus ad
+          delectus ratione tempora aspernatur consectetur id</p>
+        <a class="text-dark" href="#">Get Started</a>
+      </div>
     </div>
-</div>
-</header>
-<!-- Header -->
+  </header>
+  <!-- Header -->
 
-<!-- About -->
-<section id="about" class="about py-5">
+  <!-- About -->
+  <section id="about" class="about py-5">
     <div class="row align-items-center  container my-5 mx-auto">
-        <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
-            <h6>VADER</h6>
-            <h2>Quickly Meticulous in Making</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt delectus voluptatibus.</p>
-            <a href="about.html">Learn More</a>
-        </div>
-        <div class="img col-lg-6 col-md-6 col-12 w-50">
-            <a href="https://youtu.be/HrzbEo7GJcQ">
-              <img class="img-fluid" src="assets/images/1.svg">
-            </a>
-        </div>
-        <div>
-          <i class="fas fa-chevron-up"></i>
-        </div>
+      <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
+        <h6>VADER</h6>
+        <h2>Quickly Meticulous in Making</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam
+          eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt
+          delectus voluptatibus.</p>
+        <a href="about.html">Learn More</a>
+      </div>
+      <div class="img col-lg-6 col-md-6 col-12 w-50">
+        <a href="https://youtu.be/HrzbEo7GJcQ">
+          <img class="img-fluid" src="assets/images/1.svg">
+        </a>
+      </div>
+      <div>
+        <i class="fas fa-chevron-up"></i>
+      </div>
     </div>
-</section>
-<!-- About -->
+  </section>
+  <!-- About -->
 
-<!-- Discovery -->
-<section id="product" class="product py-5">
+  <!-- Discovery -->
+  <section id="product" class="product py-5">
     <div class="row align-items-center  container my-5 mx-auto">
-        <div class="img col-lg-6 col-md-6 col-12 w-50">
-            <img class="img-fluid" src="assets/images/2.svg">
-        </div>
-        <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
-            <h6>PRODUCT</h6>
-            <h2>Provide the Best Guarantee and Quality</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt delectus voluptatibus.</p>
-            <a href="product.html">Learn More</a>
-        </div>
+      <div class="img col-lg-6 col-md-6 col-12 w-50">
+        <img class="img-fluid" src="assets/images/2.svg">
+      </div>
+      <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
+        <h6>PRODUCT</h6>
+        <h2>Provide the Best Guarantee and Quality</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam
+          eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt
+          delectus voluptatibus.</p>
+        <a href="product.html">Learn More</a>
+      </div>
     </div>
-</section>
-<!-- Discovery -->
+  </section>
+  <!-- Discovery -->
 
-<!-- Service -->
-<section id="service" class="service py-2">
+  <!-- Service -->
+  <section id="service" class="service py-2">
     <div class="col mx-auto align-items-center my-5">
-        <div class="heading text-center pt-5">
-            <h2 class="font-weight-bold pb-5 text-light">Our Service</h2>
-        </div>
-        <div class="row mx-auto justify-content-center align-items-center text-center
+      <div class="heading text-center pt-5">
+        <h2 class="font-weight-bold pb-5 text-light">Our Service</h2>
+      </div>
+      <div class="row mx-auto justify-content-center align-items-center text-center
          container">
-            <div class="one col-lg-3 col-md-3 col-12 w-25 m-2"  >
-                <img class="img-fluid w-75" src="assets/images/4.png">
-                <h5 class="font-weight-bold pt-4" >Reduce Expense</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
-            </div>
-            <div class="one col-lg-3 col-md-3 col-12 w-25 m-2" >
-                <img class="img-fluid w-75" src="assets/images/2.svg">
-                <h5 class="font-weight-bold pt-4" >Virtual Office </h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
-            </div>
-            <div class="one col-lg-3 col-md-3 col-12 w-25 m-2" >
-                <img class="img-fluid w-75" src="assets/images/3.png">
-                <h5 class="font-weight-bold pt-4" >Premium Benefit</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
-            </div>
+        <div class="one col-lg-3 col-md-3 col-12 w-25 m-2">
+          <img class="img-fluid w-75" src="assets/images/4.png">
+          <h5 class="font-weight-bold pt-4">Reduce Expense</h5>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
         </div>
+        <div class="one col-lg-3 col-md-3 col-12 w-25 m-2">
+          <img class="img-fluid w-75" src="assets/images/2.svg">
+          <h5 class="font-weight-bold pt-4">Virtual Office </h5>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
+        </div>
+        <div class="one col-lg-3 col-md-3 col-12 w-25 m-2">
+          <img class="img-fluid w-75" src="assets/images/3.png">
+          <h5 class="font-weight-bold pt-4">Premium Benefit</h5>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, dignissimos.</p>
+        </div>
+      </div>
     </div>
-</section>
-<!-- Service -->
+  </section>
+  <!-- Service -->
 
 
-<!-- Sign -->
-<section id="sign" class="sign py-5">
+  <!-- Sign -->
+  <section id="sign" class="sign py-5">
     <div class="row align-items-center  container my-5 mx-auto">
-        <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
-            <h6>JOIN OUR TEAM</h6>
-            <h2>Lorem ipsum dolor sit amet consectetur</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt delectus voluptatibus.</p>
-            <a href="#">Start Now</a>
-        </div>
-        <div class="img col-lg-6 col-md-6 col-12 w-50">
-            <img class="img-fluid" src="assets/images/4.png">
-        </div>
+      <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
+        <h6>JOIN OUR TEAM</h6>
+        <h2>Lorem ipsum dolor sit amet consectetur</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis error, officia velit aperiam
+          eius vitae suscipit tenetur nihil repellat illum, sequi ea, aliquam consequatur consectetur modi nesciunt
+          delectus voluptatibus.</p>
+        <a href="#">Start Now</a>
+      </div>
+      <div class="img col-lg-6 col-md-6 col-12 w-50">
+        <img class="img-fluid" src="assets/images/4.png">
+      </div>
     </div>
-</section>
-<!-- Sign -->
+  </section>
+  <!-- Sign -->
 
 
-<!-- Footer -->
-<footer class=" text-center text-white">
+  <!-- Footer -->
+  <footer class=" text-center text-white">
     <!-- Grid container -->
     <div class="container p-4">
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-facebook-f"></i
-        ></a>
-  
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+
         <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-twitter"></i
-        ></a>
-  
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+
         <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-google"></i
-        ></a>
-  
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+
         <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-instagram"></i
-        ></a>
-  
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+
         <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-  
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+
         <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-github"></i
-        ></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
       </section>
       <!-- Section: Social media -->
-  
+
       <!-- Section: Form -->
       <section class="">
         <form action="">
@@ -183,7 +181,7 @@
               </p>
             </div>
             <!--Grid column-->
-  
+
             <!--Grid column-->
             <div class="col-md-5 col-12">
               <!-- Email input -->
@@ -193,7 +191,7 @@
               </div>
             </div>
             <!--Grid column-->
-  
+
             <!--Grid column-->
             <div class="col-auto">
               <!-- Submit button -->
@@ -207,7 +205,7 @@
         </form>
       </section>
       <!-- Section: Form -->
-  
+
       <!-- Section: Text -->
       <section class="mb-4">
         <p>
@@ -217,7 +215,7 @@
         </p>
       </section>
       <!-- Section: Text -->
-  
+
       <!-- Section: Links -->
       <section class="">
         <!--Grid row-->
@@ -225,83 +223,44 @@
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Action</h5>
-  
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.imdb.com/title/tt4154796/?ref_=adv_li_tt" class="text-white">Avengers: Endgame</a>
               </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0468569/?ref_=adv_li_tt" class="text-white">The Dark Knight</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0133093/?ref_=adv_li_tt" class="text-white">The Matrix</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1375666/?ref_=adv_li_tt" class="text-white">Inception</a>
-              </li>
             </ul>
           </div>
           <!--Grid column-->
-  
+
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Mistery</h5>
-  
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.imdb.com/title/tt0245429/?ref_=adv_li_tt" class="text-white">Spirited Away</a>
               </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1130884/?ref_=adv_li_tt" class="text-white">Shutter Island</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt2267998/?ref_=adv_li_tt" class="text-white">Gone Girl</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt2380307/?ref_=adv_li_tt" class="text-white">Coco</a>
-
-              </li>
             </ul>
           </div>
           <!--Grid column-->
-  
+
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Horror</h5>
-  
+
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.imdb.com/title/tt5700672/?ref_=adv_li_tt" class="text-white">Train to Busan</a>
               </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1457767/?ref_=adv_li_tt" class="text-white">The Conjuring</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0070047/?ref_=adv_li_tt" class="text-white">The Exorcist</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt5052448/?ref_=adv_li_tt" class="text-white">Get Out</a>
-              </li>
             </ul>
           </div>
           <!--Grid column-->
-  
+
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Comedy</h5>
-  
+
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.imdb.com/title/tt0266543/?ref_=adv_li_tt" class="text-white">Finding Nemo</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt3011894/?ref_=adv_li_tt" class="text-white">Wild Tales</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt3011894/?ref_=adv_li_tt" class="text-white">Wild Tales</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1187043/?ref_=adv_li_tt" class="text-white">3 Idiots</a>
               </li>
             </ul>
           </div>
@@ -312,7 +271,7 @@
       <!-- Section: Links -->
     </div>
     <!-- Grid container -->
-  
+
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
@@ -321,28 +280,29 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-<!-- script -->
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $(window).scroll(function(){
-          if($(window).scrollTop() > 300){
-            $('i').css({
-              "opacity":"1", "pointer-events":"auto"
-            });
-          }else{
-            $('i').css({
-              "opacity":"0", "pointer-events":"none" 
-           });
-         }
+  <!-- script -->
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $(window).scroll(function () {
+        if ($(window).scrollTop() > 300) {
+          $('i').css({
+            "opacity": "1", "pointer-events": "auto"
+          });
+        } else {
+          $('i').css({
+            "opacity": "0", "pointer-events": "none"
+          });
+        }
       });
-      $('i').click(function(){
-        $('html').animate({scrollTop:0}, 500);
+      $('i').click(function () {
+        $('html').animate({ scrollTop: 0 }, 500);
       })
     });
-    </script>
-<!-- script -->
-    
+  </script>
+  <!-- script -->
+
 </body>
+
 </html>
