--- a/product.html
+++ b/product.html
@@ -1,266 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="ubah.css">
-    <link rel="stylesheet" href="assets/font/stylesheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Product/title>
+  <link rel="icon" href="assets/images/icon.png">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="ubah.css">
+  <link rel="stylesheet" href="assets/font/stylesheet.css">
 </head>
+
 <body data-spy="scroll" data-target="#navbarSupportedContent">
-    <body data-spy="scroll" data-target="#navbarSupportedContent">
-<!-- Header -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+
+  <body data-spy="scroll" data-target="#navbarSupportedContent">
+    <!-- Header -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="index.html">Vader</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
               <a class="nav-link" href="index.html"></a>
             </li>
           </ul>
-            <button class="btn btn-success text-dark" type="submit">Sign in</button>
+          <button class="btn btn-success text-dark" type="submit">Sign in</button>
         </div>
-    </nav>
-</header>
-<!-- Header -->
+      </nav>
+    </header>
+    <!-- Header -->
 
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/images/1.jpg" class="d-block w-100" alt="...">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/ks.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="carousel-item">
-      <img src="assets/images/ks.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
-<!-- Footer -->
-<footer class=" text-center text-white">
-    <!-- Grid container -->
-    <div class="container p-4">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-facebook-f"></i
-        ></a>
-  
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-twitter"></i
-        ></a>
-  
-        <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-google"></i
-        ></a>
-  
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-instagram"></i
-        ></a>
-  
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-  
-        <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-github"></i
-        ></a>
-      </section>
-      <!-- Section: Social media -->
-  
-      <!-- Section: Form -->
-      <section class="">
-        <form action="">
-          <!--Grid row-->
-          <div class="row d-flex justify-content-center">
-            <!--Grid column-->
-            <div class="col-auto">
-              <p class="pt-2">
-                <strong>Sign up for our newsletter</strong>
-              </p>
-            </div>
-            <!--Grid column-->
-  
-            <!--Grid column-->
-            <div class="col-md-5 col-12">
-              <!-- Email input -->
-              <div class="form-outline form-white mb-4">
-                <input type="email" id="form5Example2" class="form-control" />
-                <label class="form-label" for="form5Example2">Email address</label>
+    <!-- Footer -->
+    <footer class=" text-center text-white">
+      <!-- Grid container -->
+      <div class="container p-4">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+              class="fab fa-facebook-f"></i></a>
+
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+
+          <!-- Google -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+              class="fab fa-linkedin-in"></i></a>
+
+          <!-- Github -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Form -->
+        <section class="">
+          <form action="">
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Grid column-->
+              <div class="col-auto">
+                <p class="pt-2">
+                  <strong>Sign up for our newsletter</strong>
+                </p>
               </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-md-5 col-12">
+                <!-- Email input -->
+                <div class="form-outline form-white mb-4">
+                  <input type="email" id="form5Example2" class="form-control" />
+                  <label class="form-label" for="form5Example2">Email address</label>
+                </div>
+              </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-auto">
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-outline-light mb-4">
+                  Subscribe
+                </button>
+              </div>
+              <!--Grid column-->
+            </div>
+            <!--Grid row-->
+          </form>
+        </section>
+        <!-- Section: Form -->
+
+        <!-- Section: Text -->
+        <section class="mb-4">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+            repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+            eum harum corrupti dicta, aliquam sequi voluptate quas.
+          </p>
+        </section>
+        <!-- Section: Text -->
+
+        <!-- Section: Links -->
+        <section class="">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">Action</h5>
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="https://www.imdb.com/title/tt4154796/?ref_=adv_li_tt" class="text-white">Avengers:
+                    Endgame</a>
+                </li>
+              </ul>
             </div>
             <!--Grid column-->
-  
+
             <!--Grid column-->
-            <div class="col-auto">
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-outline-light mb-4">
-                Subscribe
-              </button>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">Mistery</h5>
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="https://www.imdb.com/title/tt0245429/?ref_=adv_li_tt" class="text-white">Spirited Away</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">Horror</h5>
+
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="https://www.imdb.com/title/tt5700672/?ref_=adv_li_tt" class="text-white">Train to Busan</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">Comedy</h5>
+
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="https://www.imdb.com/title/tt0266543/?ref_=adv_li_tt" class="text-white">Finding Nemo</a>
+                </li>
+              </ul>
             </div>
             <!--Grid column-->
           </div>
           <!--Grid row-->
-        </form>
-      </section>
-      <!-- Section: Form -->
-  
-      <!-- Section: Text -->
-      <section class="mb-4">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-          repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-          eum harum corrupti dicta, aliquam sequi voluptate quas.
-        </p>
-      </section>
-      <!-- Section: Text -->
-  
-      <!-- Section: Links -->
-      <section class="">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Action</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="https://www.imdb.com/title/tt4154796/?ref_=adv_li_tt" class="text-white">Avengers: Endgame</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0468569/?ref_=adv_li_tt" class="text-white">The Dark Knight</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0133093/?ref_=adv_li_tt" class="text-white">The Matrix</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1375666/?ref_=adv_li_tt" class="text-white">Inception</a>
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Mistery</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="https://www.imdb.com/title/tt0245429/?ref_=adv_li_tt" class="text-white">Spirited Away</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1130884/?ref_=adv_li_tt" class="text-white">Shutter Island</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt2267998/?ref_=adv_li_tt" class="text-white">Gone Girl</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt2380307/?ref_=adv_li_tt" class="text-white">Coco</a>
+        </section>
+        <!-- Section: Links -->
+      </div>
+      <!-- Grid container -->
 
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Horror</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="https://www.imdb.com/title/tt5700672/?ref_=adv_li_tt" class="text-white">Train to Busan</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1457767/?ref_=adv_li_tt" class="text-white">The Conjuring</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt0070047/?ref_=adv_li_tt" class="text-white">The Exorcist</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt5052448/?ref_=adv_li_tt" class="text-white">Get Out</a>
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-  
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Comedy</h5>
-  
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="https://www.imdb.com/title/tt0266543/?ref_=adv_li_tt" class="text-white">Finding Nemo</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt3011894/?ref_=adv_li_tt" class="text-white">Wild Tales</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt3011894/?ref_=adv_li_tt" class="text-white">Wild Tales</a>
-              </li>
-              <li>
-                <a href="https://www.imdb.com/title/tt1187043/?ref_=adv_li_tt" class="text-white">3 Idiots</a>
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
-    </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2021 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MBohkono.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
-<!-- script -->
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2022 Copyright:
+        <a class="text-white" href="https://github.com/Agililham">Agililham</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+    <!-- script -->
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script>
-      $(document).ready(function(){
-        $(window).scroll(function(){
-          if($(window).scrollTop() > 300){
+      $(document).ready(function () {
+        $(window).scroll(function () {
+          if ($(window).scrollTop() > 300) {
             $('i').css({
-              "opacity":"1", "pointer-events":"auto"
+              "opacity": "1", "pointer-events": "auto"
             });
-          }else{
+          } else {
             $('i').css({
-              "opacity":"0", "pointer-events":"none" 
-           });
-         }
+              "opacity": "0", "pointer-events": "none"
+            });
+          }
+        });
+        $('i').click(function () {
+          $('html').animate({ scrollTop: 0 }, 500);
+        })
       });
-      $('i').click(function(){
-        $('html').animate({scrollTop:0}, 500);
-      })
-    });
     </script>
-<!-- script -->
-    
-</body>
+    <!-- script -->
+
+  </body>
+
 </html>
