--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#service">Service</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">Sign up</a>
+          </li>
         </ul>
         <button class="btn btn-success text-dark" type="submit">Sign in</button>
       </div>
