--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
     <!-- Footer -->
     <!-- script -->
     <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <script>
       VANTA.NET({
