--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
       </div>
     </nav>
     <div class="mid">
-      <div class="cuy text-center">
+      <div class="cuy text-left">
         <h2 class="text-light display-4 font-weight-bold">Web Development</h2>
-        <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus ad
-          delectus ratione tempora aspernatur consectetur id</p>
+        <p class="text-light mx-left">Lorem ipsum dolor sit amet consectetur adipisicing elit reiciendis </p>
         <a class="text-dark" href="#">Get Started</a>
       </div>
     </div>
