--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       minWidth: 200.00,
       scale: 1.00,
       scaleMobile: 1.00,
-      color: 0x00BF85a,
+      color: 0x00BF85,
       backgroundColor: 0x000000,
     })
   </script>
