--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
         </div>
       </nav>
       <div class="mid">
-        <div class="cuy text-center">
+        <div class="cuy text-left">
           <h2 class="text-light display-4 font-weight-bold">Quickly Meticulous in Making</h2>
-          <p class="text-light mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repellat
+          <p class="text-light ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repellat
             temporibus dolorem quas illum sequi asperiores ex error quisquam accusamus ipsa sapiente </p>
         </div>
       </div>
